test/spec_vectors/local_init/fail/module_1.wat
(module (func $uninit (local $x (ref extern)) (drop (local.get $x))))